--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "storybook": "start-storybook -p 6006 -c .storybook"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -30,7 +31,15 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@storybook/addon-info": "^4.0.4",
+        "@storybook/addon-knobs": "^4.0.4",
+        "@storybook/react": "^4.0.4",
         "@types/styled-components": "^4.0.3",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.4",
+        "react-docgen-typescript-webpack-plugin": "^1.1.0",
+        "storybook-addon-jsx": "^5.4.0",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.15.0",
         "tslint-config-standard": "^8.0.1",
