--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@types/react": "16.4.18",
         "@types/react-dom": "16.0.9",
         "immutable": "^4.0.0-rc.12",
+        "normalize.css": "^8.0.1",
         "react": "^16.6.0",
         "react-dom": "^16.6.0",
         "react-scripts": "2.1.1",
